changed Complex again

--- a/prj.lab/complex/CMakeLists.txt
+++ b/prj.lab/complex/CMakeLists.txt
@@ -5,3 +5,5 @@ target_include_directories(complex PUBLIC
   $<INSTALL_INTERFACE:include>
 )
 install(TARGETS complex)
+project (theproject)
+add_executable (thetarget main.cpp)
