--- a/prj.test/CMakeLists.txt
+++ b/prj.test/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_executable(test_complex test_complex.cpp)
 add_executable(test_rational test_rational.cpp)
+add_executable(test_StackArrT test_StackArrT.cpp)
 target_link_libraries(test_complex complex)
 target_link_libraries(test_rational rational)
+target_link_libraries(test_StackArrT StackArrT)
 
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stackarr)
