--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(complex)
 add_subdirectory(rational)
 add_subdirectory(StackArrT)
 add_subdirectory(StackLstT)
+add_subdirectory(DoubleListQueue)
