--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(rational)
 add_subdirectory(StackArrT)
 add_subdirectory(StackLstT)
 add_subdirectory(DoubleListQueue)
+add_subdirectory(iStack)
+add_subdirectory(BinaryTree)
