--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(StackLstT)
 add_subdirectory(DoubleListQueue)
 add_subdirectory(iStack)
 add_subdirectory(BinaryTree)
+add_subdirectory(HashTable)
