--- a/prj.test/CMakeLists.txt
+++ b/prj.test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(test_StackLstT test_StackLstT.cpp)
 add_executable(test_DoubleListQueue test_DoubleListQueue.cpp)
 add_executable(test_IStackBase test_IStackBase.cpp)
 add_executable(test_BinaryTree test_BinaryTree.cpp)
+add_executable(test_HashTable test_HashTable.cpp)
 target_link_libraries(test_complex complex)
 target_link_libraries(test_rational rational)
 target_link_libraries(test_StackArrT StackArrT)
@@ -12,6 +13,7 @@ target_link_libraries(test_StackLstT StackLstT)
 target_link_libraries(test_DoubleListQueue DoubleListQueue)
 target_link_libraries(test_IStackBase iStack)
 target_link_libraries(test_BinaryTree BinaryTree)
+target_link_libraries(test_HashTable HashTable)
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT test_stackarr)
 
