--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(DoubleListQueue)
 add_subdirectory(iStack)
 add_subdirectory(BinaryTree)
 add_subdirectory(HashTable)
+add_subdirectory(IContainerBase)
