--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(iStack)
 add_subdirectory(BinaryTree)
 add_subdirectory(HashTable)
 add_subdirectory(IContainerBase)
+add_subdirectory(final_test)
